<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        layout="@layout/header"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/imageviewheight"
            android:layout_height="@dimen/imageviewheight"
            android:layout_centerInParent="true"
            android:id="@+id/weatherimage"
            android:src="@drawable/ic_rain"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_marginTop="10dp"
            />


    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"

                android:layout_below="@+id/weatherimage"

                android:orientation="horizontal">
                <customfont.Customfont
                    android:layout_width="@dimen/textsize"
                    android:layout_height="wrap_content"
                    android:id="@+id/temp"
                    android:text="@string/temp"
                    android:textColor="@color/black"/>
                <customfont.Customfont
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/black"/>

                <customfont.Customfontregular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:id="@+id/tempresult"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weatherimage"

                android:orientation="horizontal">
                <customfont.Customfont
                    android:layout_width="@dimen/textsize"
                    android:layout_height="wrap_content"
                    android:id="@+id/maxtemp"
                    android:text="@string/maxtemp"
                    android:textColor="@color/black"/>
                <customfont.Customfont
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/black"/>
                <customfont.Customfontregular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:id="@+id/maxresult"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weatherimage"

                android:orientation="horizontal">
                <customfont.Customfont
                    android:layout_width="@dimen/textsize"
                    android:layout_height="wrap_content"
                    android:id="@+id/mintemp"
                    android:text="@string/mintemp"
                    android:textColor="@color/black"/>
                <customfont.Customfont
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/black"/>
                <customfont.Customfontregular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:id="@+id/mintenoresult"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weatherimage"

                android:orientation="horizontal">
                <customfont.Customfont
                    android:layout_width="@dimen/textsize"
                    android:layout_height="wrap_content"
                    android:id="@+id/humidty"
                    android:text="@string/humidity"
                    android:textColor="@color/black"/>
                <customfont.Customfont
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/black"/>
                <customfont.Customfontregular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:id="@+id/humidtyresult"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weatherimage"

                android:orientation="horizontal">
                <customfont.Customfont
                    android:layout_width="@dimen/textsize"
                    android:layout_height="wrap_content"
                    android:id="@+id/wind"
                    android:text="@string/Wind"
                    android:textColor="@color/black"/>
                <customfont.Customfont
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/black"/>
                <customfont.Customfontregular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:id="@+id/windpressure"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"

                android:orientation="horizontal">
                <customfont.Customfont
                    android:layout_width="@dimen/textsize"
                    android:layout_height="wrap_content"
                    android:id="@+id/pressure"
                    android:text="@string/Pressure"
                    android:textColor="@color/black"/>
                <customfont.Customfont
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/black"/>
                <customfont.Customfontregular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:id="@+id/pressureresult"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"

                android:orientation="horizontal">
                <customfont.Customfont
                    android:layout_width="@dimen/textsize"
                    android:layout_height="wrap_content"
                    android:id="@+id/location"
                    android:text="@string/location"
                    android:textColor="@color/black"/>
                <customfont.Customfont
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/black"/>
                <customfont.Customfontregular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:id="@+id/locationresult"/>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>